Align everything correctly, add mobile permissions request

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,31 @@ body {
   overflow: hidden;
 }
 
+.permission-scrim {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgb(18 22 31 / 80%);
+  z-index: 100;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+}
+
+.permission-btn {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  position: absolute;
+  width: 120px;
+  height: 40px;
+  background: #ecf6ff;
+  border: none;
+  border-radius: 5px;
+  color: #0e1116;
+}
+
 .container {
   text-align: center;
   width: 100%;
@@ -29,7 +54,8 @@ body {
 p {
   color: gold;
   margin: 0;
-  text-shadow: 0 8px 6px rgb(0 0 0 / 60%);
+  line-height: 1em;
+  text-shadow: 0 8px 8px rgb(0 0 0 / 70%);
 }
 
 .headline {
@@ -42,24 +68,73 @@ p {
 .subheadline {
   position: absolute;
   font-size: 28px;
-  top: 30%;
+  top: 40%;
   width: 100%;
 }
 
 .location {
   position: absolute;
-  font-size: 42px;
-  top: 45%;
-  width: 100%;
+  font-size: 36px;
+  top: 50%;
+  width: 70%;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .map {
   fill: gold;
   position: absolute;
-  width: 50%;
-  height: 75%;
+  width: 350px;
+  height: 285px;
   left: 0;
   right: 0;
-  bottom: 0;
+  top: 50%;
+  bottom: auto;
   margin: auto;
+  filter: drop-shadow(0 0 6px black);
+}
+
+.star-container {
+  position: absolute;
+  width: 350px;
+  height: 285px;
+  left: 0;
+  right: 0;
+  top: 50%;
+  bottom: auto;
+  margin: auto;
+}
+
+.star {
+  fill: gold;
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  top: 53%;
+  left: 64%;
+  filter: drop-shadow(0 4px 8px #000e);
+}
+
+@media (min-width: 400px) {
+  .subheadline {
+    top: 30%;
+  }
+
+  .map {
+    bottom: 0;
+    width: 550px;
+    height: 450px;
+  }
+
+  .star-container {
+    bottom: 0;
+    width: 550px;
+    height: 450px;
+  }
+
+  .star {
+    top: 56%;
+    left: 68%;
+  }
 }
